--- a/package.json
+++ b/package.json
@@ -1,29 +1,37 @@
 {
   "name": "server",
   "version": "1.0.0",
-  "main": "server.js",
+  "description": "",
+  "main": "src/index.js",
   "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js"
+    "start": "node src/index.js",
+    "dev": "nodemon src/index.js"
   },
-  "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": "",
   "dependencies": {
     "@apollo/server": "^4.11.2",
+    "@graphql-tools/merge": "^9.0.24",
+    "apollo-server-express": "^3.13.0",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
-    "dotenv": "^16.4.7",
+    "dotenv": "^16.5.0",
     "express": "^4.18.2",
     "express-rate-limit": "^7.1.5",
     "express-validator": "^7.0.0",
+    "firebase": "^12.2.1",
+    "firebase-admin": "^12.7.0",
     "graphql": "^16.9.0",
     "graphql-tag": "^2.12.6",
+    "graphql-upload": "^13.0.0",
     "helmet": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.0.3",
-    "nodemailer": "^6.9.7"
+    "multer": "^2.0.2",
+    "node-geocoder": "^4.4.1",
+    "node-osrm": "^1.0.3",
+    "nodemailer": "^6.9.7",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
