--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "main": "src/index.js",
   "scripts": {
     "start": "node src/index.js",
-    "dev": "nodemon src/index.js",
-    "build": "npm ci --omit=dev"
+    "dev": "nodemon src/index.js"
   },
   "author": "",
   "license": "ISC",
